@@ -1,9 +1,10 @@
-# $NetBSD: Makefile,v 1.8 2005/12/05 20:50:56 rillig Exp $
+# $NetBSD: Makefile,v 1.9 2006/08/14 13:19:54 abs Exp $
 #
 
-DISTNAME=	msu-1.06
+DISTNAME=	msu-1.08
 CATEGORIES=	security
 MASTER_SITES=	http://www.mono.org/abs/tools/msu/
+EXTRACT_SUFX=	.tbz
 
 MAINTAINER=	abs@NetBSD.org
 HOMEPAGE=	http://www.mono.org/abs/tools/msu/
